# Plantcasso

./: .gitignore  AGENTS.md  Base.3mf  README.md  data.csv  data_100hz.csv  data_collection.py  data_unhealthy.csv  main.py  pyproject.toml  ref_plantsignal.md  ref_plantsignal_converter.py
POC_electrode_reader/: POC_electrode_reader.ino
data/: data_100hz.csv  data_5hz.csv
pipeline/: 01_filter_extract.py  02_train.py  03_visualize.py
plant-dashboard/: next.config.ts  package.json  pnpm-lock.yaml
plant-dashboard/app/: globals.css  layout.tsx
plant-dashboard/app/api/stream/: route.ts
plant-dashboard/app/components/: Dashboard.tsx
plant-dashboard/app/lib/: serial.ts
plant_inference/: model_params.h  plant_inference.ino
servo_sample/: servo_sample.ino
web_browser/dashboard/: app.py  backend.py  plant-81856-firebase-adminsdk-fbsvc-3ef0631cfd.json  test_firebase.py
web_browser/dashboard-2/: app.py
web_browser/dashboard-2/templates/: index.html  index2.html
web_browser/dashboard/templates/: index.html
