[project]
name = "plantcasso"
version = "0.1.0"
description = "Plant bioelectric signals → feature extraction → PCA/K-means → 5-DOF servo arm (Berkeley AI Hackathon 2026)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "pyserial>=3.5",
]

[project.scripts]
plantcasso = "main:main"
